Commit From RStudio

--- a/Web-Crawler.qmd
+++ b/Web-Crawler.qmd
@@ -84,3 +84,30 @@ while count < 3:
   count +=1
 ```
 
+## AJAX(Asynchronous JavaScript and XML) (XHR)
+```{python}
+#| column: page
+# Get url from PTT movies
+import urllib.request as req
+url = "https://medium.com/_/api/home-feed"
+# Request with headers information
+request = req.Request(url, headers = {
+  # Headers should be a dictionary
+  "User-Agent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/110.0"
+})
+with req.urlopen(request) as response:
+  data = response.read().decode("utf-8")
+```
+
+```{python}
+#| column: page
+# Json Format
+import json
+data = data.replace("])}while(1);</x>","")
+data = json.loads(data) 
+
+posts = data["payload"]["references"]["Post"]
+for key in posts:
+  post = posts[key]
+  print(post["title"])
+```
