Commit From RStudio

--- a/Web-Crawler.qmd
+++ b/Web-Crawler.qmd
@@ -18,10 +18,14 @@ execute:
 
 ```{r}
 #| echo: false
+#| message: false
 library(reticulate)
+library(tidyverse)
+library(rvest)
+library(gt)
 ```
 
-# Web Crawler
+# Python Web Crawler
 ```{python}
 #| column: page
 # Get url from PTT movies
@@ -111,3 +115,79 @@ for key in posts:
   post = posts[key]
   print(post["title"])
 ```
+
+## Request Data(Request Payload Request Body)
+```{python}
+#| column: page
+# Get url from PTT movies
+import urllib.request as req
+import json
+url = "https://medium.com/_/graphql"
+# Request with headers information
+requestData = {"operationName":"CuratedHomeFeedModuleQuery","variables":{"paging":{"from":"10","limit":10}},"query":"query CuratedHomeFeedModuleQuery($paging: PagingOptions!) {\n  staffPicksFeed(input: {paging: $paging}) {\n    items {\n      ...CuratedHomeFeedItems_homeFeedItems\n      __typename\n    }\n    pagingInfo {\n      next {\n        page\n        limit\n        from\n        __typename\n      }\n      __typename\n    }\n    __typename\n  }\n}\n\nfragment CuratedHomeFeedItems_homeFeedItems on HomeFeedItem {\n  __typename\n  post {\n    id\n    title\n    ...HomeFeedItem_post\n    __typename\n  }\n}\n\nfragment HomeFeedItem_post on Post {\n  __typename\n  id\n  title\n  firstPublishedAt\n  mediumUrl\n  collection {\n    id\n    name\n    domain\n    logo {\n      id\n      __typename\n    }\n    __typename\n  }\n  creator {\n    id\n    name\n    username\n    imageId\n    mediumMemberAt\n    __typename\n  }\n  previewImage {\n    id\n    __typename\n  }\n  previewContent {\n    subtitle\n    __typename\n  }\n  readingTime\n  tags {\n    ...TopicPill_tag\n    __typename\n  }\n  ...BookmarkButton_post\n  ...OverflowMenuButtonWithNegativeSignal_post\n  ...PostPresentationTracker_post\n  ...PostPreviewAvatar_post\n  ...Star_post\n}\n\nfragment TopicPill_tag on Tag {\n  __typename\n  id\n  displayTitle\n  normalizedTagSlug\n}\n\nfragment BookmarkButton_post on Post {\n  visibility\n  ...SusiClickable_post\n  ...AddToCatalogBookmarkButton_post\n  __typename\n  id\n}\n\nfragment SusiClickable_post on Post {\n  id\n  mediumUrl\n  ...SusiContainer_post\n  __typename\n}\n\nfragment SusiContainer_post on Post {\n  id\n  __typename\n}\n\nfragment AddToCatalogBookmarkButton_post on Post {\n  ...AddToCatalogBase_post\n  __typename\n  id\n}\n\nfragment AddToCatalogBase_post on Post {\n  id\n  __typename\n}\n\nfragment OverflowMenuButtonWithNegativeSignal_post on Post {\n  id\n  ...OverflowMenuWithNegativeSignal_post\n  __typename\n}\n\nfragment OverflowMenuWithNegativeSignal_post on Post {\n  id\n  creator {\n    id\n    __typename\n  }\n  collection {\n    id\n    __typename\n  }\n  ...OverflowMenuItemUndoClaps_post\n  __typename\n}\n\nfragment OverflowMenuItemUndoClaps_post on Post {\n  id\n  clapCount\n  ...ClapMutation_post\n  __typename\n}\n\nfragment ClapMutation_post on Post {\n  __typename\n  id\n  clapCount\n  ...MultiVoteCount_post\n}\n\nfragment MultiVoteCount_post on Post {\n  id\n  ...PostVotersNetwork_post\n  __typename\n}\n\nfragment PostVotersNetwork_post on Post {\n  id\n  voterCount\n  recommenders {\n    name\n    __typename\n  }\n  __typename\n}\n\nfragment PostPresentationTracker_post on Post {\n  id\n  visibility\n  previewContent {\n    isFullContent\n    __typename\n  }\n  collection {\n    id\n    slug\n    __typename\n  }\n  __typename\n}\n\nfragment PostPreviewAvatar_post on Post {\n  __typename\n  id\n  collection {\n    id\n    name\n    ...CollectionAvatar_collection\n    __typename\n  }\n  creator {\n    id\n    username\n    name\n    ...UserAvatar_user\n    ...userUrl_user\n    ...useIsVerifiedBookAuthor_user\n    __typename\n  }\n}\n\nfragment CollectionAvatar_collection on Collection {\n  name\n  avatar {\n    id\n    __typename\n  }\n  ...collectionUrl_collection\n  __typename\n  id\n}\n\nfragment collectionUrl_collection on Collection {\n  id\n  domain\n  slug\n  __typename\n}\n\nfragment UserAvatar_user on User {\n  __typename\n  id\n  imageId\n  mediumMemberAt\n  name\n  username\n  ...userUrl_user\n}\n\nfragment userUrl_user on User {\n  __typename\n  id\n  customDomainState {\n    live {\n      domain\n      __typename\n    }\n    __typename\n  }\n  hasSubdomain\n  username\n}\n\nfragment useIsVerifiedBookAuthor_user on User {\n  verifications {\n    isBookAuthor\n    __typename\n  }\n  __typename\n  id\n}\n\nfragment Star_post on Post {\n  id\n  creator {\n    id\n    __typename\n  }\n  __typename\n}\n"}
+request = req.Request(url, 
+                      headers = {
+                          "Content-Type":"application/json",
+                        # Headers should be a dictionary
+                          "User-Agent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/110.0"},
+                        # request Data
+                     data = json.dumps(requestData).encode("utf-8"))
+with req.urlopen(request) as response:
+  result = response.read().decode("utf-8")
+  # String to Dictionary with json loads
+result = json.loads(result)
+# List contains all title
+items = result["data"]["staffPicksFeed"]["items"]
+for item in items:
+  print(item["post"]["title"])
+# print(result["data"]["staffPicksFeed"]["items"][0]["post"]["title"])
+```
+
+# R Web Crawler
+
+## Star Wars films
+```{r}
+#| column: page
+html <- read_html("https://rvest.tidyverse.org/articles/starwars.html")
+```
+
+```{r}
+#| column: page
+tibble(
+  Title = html |> 
+          html_elements("section") |> 
+          html_element("h2") |> 
+          html_text2(),
+  `Released Date` = html |> 
+                     html_elements("section") |> 
+                     html_element("p") |> 
+                     html_text2() |> 
+                     str_remove("Released: ") |> 
+                     parse_date(),
+  Director = html |> 
+             html_elements("section") |> 
+             html_element(".director") |> 
+             html_text2(),
+  Intro = html |> 
+          html_elements("section") |> 
+          html_element(".crawl") |> 
+          html_text2()
+) |> 
+  gt() |> 
+  cols_align(columns = everything(),align = "center")
+```
+
+## PTT Movies
+```{r}
+#| column: page
+moveis_url <- read_html("https://www.ptt.cc/bbs/movie/index.html")
+```
+
+```{r}
+#| column: page
+moveis_url |> 
+           html_elements("div") |> 
+           html_elements(".title") |> 
+           html_text2()
+```
+
